NoRef * Fixing the side-nav  styling used for highlighting active fields... perhaps this is a bit too much
git-svn-id: svn://data.ilscipio.com/ilscipio/ofbiz_foundation/trunk@9271 55bbc10b-e964-4c8f-a844-a62c6f7d3c80

--- a/themes/base/webapp/base/scss/_base.scss
+++ b/themes/base/webapp/base/scss/_base.scss
@@ -71,6 +71,15 @@ input,select,text-area {max-width:50em;}
                 color: $jet;
             }
         }
+        
+        &.active {
+            //Overrides side_nav
+            background: $sub-nav-active-bg;
+            > a:first-child:not(.button) {
+                color: $sub-nav-active-color;
+                cursor: $sub-nav-active-cursor;
+            }
+        }
     }
 }
 
